# Voice_Clone-VST

./: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  COLAB_GUIDE.md  COLAB_QUICKSTART.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  FINAL_READINESS_AUDIT.md  FINAL_VERIFICATION.md  FIRST_USE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY_LAUNCHER.md  LAUNCHER_GUIDE.md  LICENSE  PRODUCTION_VERIFICATION.md  QUICKSTART.md  README.md  README_OLD.md  RELEASE_NOTES.md  SUMMARY_OF_CHANGES.md  TESTING.md  TEST_RESULTS.md  build_maevn_onnx.bat  build_maevn_onnx.sh  colab_maevn.ipynb  install_maevn.bat  install_maevn.sh  launch_maevn.bat  launch_maevn.sh  maevn.desktop  setup_maevn_repo.bat  setup_maevn_repo.sh
.github/: FIREWALL_CONFIG.md  IMPLEMENTATION_SUMMARY.md
.github/actions/configure-firewall/: README.md  action.yml
.github/workflows/: ci.yml  firewall-config.yml
CMI/: CHECKLIST.md  FAQ.md  INDEX.md  MACF.md  QUICKSTART.md  README.md  SUMMARY.md  agent_roles.md  operational_ethics.md
CMI/coordination/: agent_registry.md  mission_index.md  module_dependencies.md  performance_metrics.md  task_assignments.md
CMI/mission_logs/: mission_009_spectral_ghost_choir.md  mission_log_template.md
Models/: LayerMap.md  config.json  metadata.json
Models/drums/: README.md
Models/instruments/: README.md
Models/vocals/: README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/AI/: AIEffects.cpp  AIEffects.h  ONNXInference.cpp  ONNXInference.h  VocalSynthesis.cpp  VocalSynthesis.h
Source/Audio/: AudioEngine.cpp  AudioEngine.h  InstrumentGenerator.cpp  InstrumentGenerator.h
Source/DSP/: Effects.cpp  Effects.h  FXChain.cpp  FXChain.h
Source/Parser/: Arrangement.cpp  Arrangement.h  ScriptParser.cpp  ScriptParser.h
Source/State/: ParameterState.cpp  ParameterState.h  UndoManager.cpp  UndoManager.h
Source/UI/: MainComponent.cpp  MainComponent.h  TimelineComponent.cpp  TimelineComponent.h
Tests/: ArrangementTests.cpp  AudioEngineTests.cpp  BuildVerificationTests.cpp  CMakeLists.txt  ScriptParserTests.cpp
_codeql_build_dir/: juce_vst3_helper
_codeql_build_dir/Tests/: ArrangementTests  BuildVerificationTests  ScriptParserTests
examples/: ARRANGEMENTS.md
scripts/: README.md  export_drum_models.py  export_instrument_models.py  export_vocal_models.py
